[metadata]
name = FMLC
version = 1.1.1
author = Gehbauer, Christoph
author_email = 
description = A framework/backend for multi-layer and multi-time domain controller.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LBNL-ETA/FMLC
project_urls =
    Bug Tracker = https://github.com/LBNL-ETA/FMLC/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = fmlc
packages = find:
python_requires = >=3.6

install_requires =
    pandas
    pytest
    requests
    numpy

[options.packages.find]
where = fmlc